add new api + xử lý